# galactica-cli

./: Cargo.toml  README.md  backlog.md  build-releases.sh  build.rs  galactica.json  prompt_ideas.md  windows-install.ps1
.github/workflows/: compile-binaries.yml
flatpak/: Dockerfile  build.sh  org.s7s.labs.galactica.yml
src/: config.rs  discord_login.rs  errors.rs  galactica_api.rs  integrations.rs  lib.rs  main.rs  sessions.rs  templates.rs  updates.rs
templates/: git-commit-hook.txt
