[package]
name = "galactica"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
vergen = { version = "8.0.0-beta.0", features = ["build", "cargo", "git", "gitcl"] }

[dependencies]
galactica-lib = { git = "https://github.com/synthesis-labs/galactica-lib" }
serde = {version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }
clap = "4.1.4"
dirs = "4.0.0"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = "1.25.0"
askama = "0.12.0"
regex = "1.7.1"
colored = "2.0.0"
rocket = "0.5.0-rc.2"
open = "3.2.0"
atty = "0.2.14"
octocrab = "0.18.1"